docs/errors/examples/unknown-decorator/unknown-decorator.grob
// E4001 — applying a decorator that is not one of the four recognised in v1
param {
    @admin
    user: string
}

print("Hello, ${user}")
